force-app/main/default/objects/breadwinner_qbo__BW_AP_Payment_Transaction__c/breadwinner_qbo__BW_AP_Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description>Junction object (Transactions) between Bill and Bill Payments</description>
    <label>Bill Payment Transaction</label>
    <nameField>
        <label>Bill Payment Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>