force-app/main/default/objects/breadwinner_qbo__BW_AP_Payment_Transaction__c/fields/breadwinner_qbo__Bill_Payment__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Bill_Payment__c</fullName>
    <label>Bill Payment</label>
    <referenceTo>breadwinner_qbo__BW_AP_Bill_Payment__c</referenceTo>
    <relationshipLabel>Bill Payment Transactions</relationshipLabel>
    <relationshipName>Bill_Payment_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>