force-app/main/default/objects/breadwinner_qbo__BW_AP_Payment_Transaction__c/fields/breadwinner_qbo__Created_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Created_in_QBO_Date__c</fullName>
    <formula>breadwinner_qbo__Bill_Payment__r.breadwinner_qbo__Created_in_QBO_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>