force-app/main/default/objects/breadwinner_qbo__BW_AP_Payment_Transaction__c/fields/breadwinner_qbo__Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Reference_Number__c</fullName>
    <description>Payment Reference Number of the related Payment</description>
    <formula>breadwinner_qbo__Bill_Payment__r.breadwinner_qbo__Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Reference Number</label>
    <type>Text</type>
</CustomField>