force-app/main/default/objects/breadwinner_qbo__BW_AP_Payment_Transaction__c/fields/breadwinner_qbo__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Type__c</fullName>
    <formula>breadwinner_qbo__Bill_Payment__r.breadwinner_qbo__Payment_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>